--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="356dp"
         android:ems="10"
         android:inputType="text"
-        android:hint="Cotrasena"
+        android:hint="Cotraseña"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
